--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script>
     window.$docsify = {
       name: 'docsify_blog',
-      repo: 'https://github.com/0XuX0/docsify_blog',
+      repo: '',
       maxLevel: 5,
       subMaxLevel: 5,
       homepage: 'readme.md',
